<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:padding="16dp"
    android:background="@color/colorPrimary"
    >

    <EditText
        android:id="@+id/create_task_et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_name_hint"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#6324D6"
        />

    <Spinner
        android:id="@+id/create_task_spi_project"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/create_task_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_task_et_name"
        android:background="@color/colorAccent"
        />

    <Button
        android:id="@+id/create_task_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/ok"
        />

</androidx.constraintlayout.widget.ConstraintLayout>